--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,63 @@
 /* ini file css */
+main {
+    padding: 64px 32px 64px 32px;
+}
+.main-title {
+    text-align: center;
+}
+.main-introduction {
+    padding: 16px;
+    background-color: aliceblue;
+    border-radius: 8px;
+}
+.section-celcius{
+    padding-top: 16px;
+}
+.section-fahrenheit{
+    padding-top: 16px;
+}
+.section-explanation{
+    padding-top: 16px;
+}
+.section-result{
+    padding-top: 16px;
+}
+textarea {
+    width: 100%;
+    height: 32px;
+    resize: none;
+    border: 2px solid lavender;
+    border-radius: 4px;
+    font-size: 16px;
+    color: burlywood;
+}
+.explanation {
+    font-size:20px;
+    font-style: italic;
+}
+.explanation>sub {
+    font-style: normal;
+}
+button {
+    border: none;
+    font-size: 14px;
+    padding: 8px;
+    border-radius: 4px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-right: 8px;
+}
+#button-convert {
+    background-color: chocolate;
+    color:white;
+}
+#button-reset {
+    background-color: rgb(127, 0, 0);
+    color:white;
+}
+#button-reverse {
+    background-color: rgb(127, 0, 158);
+    color:white;
+}
+.container-button {
+    padding-top: 8px;
+}
