--- a/css/style.css
+++ b/css/style.css
@@ -146,3 +146,15 @@ h2 {
     font-weight: 400;
     font-style: normal;
 }
+
+@media screen and (max-width:700px) {
+    .main-introduction {
+        width:75%;
+        margin: auto;
+    }
+    textarea {
+        font-size: 3vw;
+        overflow-x: hidden;
+        display: block;
+    }
+}
